--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "GSS challange More Data"
-author: "Put your name here!"
-date: "put the date here"
+author: "Caitlyn Hense"
+date: "4/1/25"
 output: html_document
 ---
 
