--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -86,11 +86,14 @@ For white people, the vote was close to 2:1 ratio for in favor vs. against capit
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
-`
+```{r}
+fisherXY(mydata$race,mydata$cappun)
+```
 
 
 ## More data version
 
+The P values are all significantly low (< 2.2e-16, 0.002607, 0.001564). These results show us that none of the groups were similar to each other, they are all statistically different.
 
 # Discussion and Conclusion
 
