--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -75,15 +75,17 @@ rowPerc(table2)
 colPerc(table2)
 ```
 
-
+This further shows that the results are very similar to the data in the master branch.
 
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
-`
+```{r}
+fisherXY(mydata$race,mydata$cappun,printAll = TRUE)
+```
 
-
+The only two groups that were different in this sample set were black people and white people they had a significantly low P value of 0.00001741. Black people and other races were very similar and same with white people and other races with p values of 0.06299 and 0.2565. In this Branch, the only two groups that were statistically different are the white people and black people. This is different from the master Branch because in the master, everyone was different.
 
 # Discussion and Conclusion
 
